# sash

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.new  INSTRUCTIONS.md  LICENSE  README.md  install_z3.sh  notes.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: eval.yml  test.yml
benchmarks/: README.md  bug_reports.md  codes_out_of_scope.json  codes_out_of_scope.yaml  debashification.txt  first_milestone_all.sh  gh-nvm_sh-nvm-unset_var_complex.sh  gh-spf13-spf13_vim-unset_var_simple.sh  hp-itunes.sh  report.html  so-incorrect_comment_delimiter.sh  validate.sh
benchmarks/_not_integrated/: cuda_4.0.sh  cuda_4.1.28.sh
benchmarks/_old_format/: so-for_i_in_comma_separated.sh  ss-example_rm_rf.sh
benchmarks/c-const_cond/: info.yaml  posix.sh
benchmarks/c-debootstrap/: info.yaml  posix.sh
benchmarks/c-debootstrap_2/: info.yaml  original.sh
benchmarks/c-makefile/: posix.sh
benchmarks/c-unset_func/: info.yaml  posix.sh
benchmarks/c-unset_var_2/: fixed.sh  info.yaml  posix.sh
benchmarks/c-unset_var_3/: info.yaml
benchmarks/c-unset_var_5/: fixed.sh
benchmarks/c-unset_var_set_u_1/: info.yaml
benchmarks/c-unset_var_set_u_2/: info.yaml  posix.sh
benchmarks/hp-backup_manager/: info.yaml
bug_reports/: info.yaml
doc/: architecture.md
results/: benchmark_depth_loc.csv  benchmark_loc.csv  bug_depth_stats.csv  koala_results_summary.txt  koala_wall_time.csv  results.csv  results.html  timeout_10_solver_timeout_10_with_dfs_filtered.txt  timeout_10_solver_timeout_10_without_dfs_filtered.txt  timeout_30_solver_timeout_30_with_dfs_filtered.txt  timeout_30_solver_timeout_30_without_dfs_filtered.txt  timeout_60_solver_timeout_60_with_dfs_filtered.txt  timeout_60_solver_timeout_60_without_dfs_filtered.txt
scripts/: batch_eval_runs.sh  benchmark_metadata.py  bug_depth_stats.py  bugdepth.py  code_distribution.py  eval.py  eval.sh  evaluation.py  evaluation.sh  example_1.sh  example_2.sh  fetch_stackexchange_questions.py  full_eval.sh  gen_table.py  generate_mock_eval_csv.py  on_koala  on_koala.sh  plots.py  precompute_loc_cache.py  remote_eval.sh  report.py  results.csv  resumable.sh  run_benchmarks.sh  run_on_dir.py  sash-docker.sh  setup_ubuntu.sh  table.py  timeout_sweep_eval.sh  try_parse.py
task_a/: cheatsheet.sh  script1.sh  script2.sh  script3.sh
tests/: old_test_nexpand.py  test_constraints.py  test_example.py  test_expansion.py  test_expansion_2.py  test_expansion_new.py  test_nexpand.py  test_parser_backend_selection.py  test_solver.py  test_specs.py  test_state.py  test_symb.py  test_symb_utils.py  test_symbolic_strings.py  test_util.py  test_util_prop.py  util.py
(+1179 files in other folders)
