[project]
name = "sash"
version = "0.1.0"
description = "A static analysis tool for the shell based on symbolic execution"
readme = "README.md"
authors = [
    { name = "John Brown", email = "john_brown@brown.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "libdash>=0.3.1",
    "pandas>=2.3.2",
    "pash-annotations>=0.2.4",
    "shasta>=0.2.2",
    "shortuuid>=1.0.13",
    "z3-solver>=4.14.1.0",
]

[project.scripts]
sash = "sash:symb.argmain"
example = "sash:example.example"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.uv.sources]
libdash = { git = "https://github.com/binpash/libdash", marker = "sys_platform == 'darwin'" }
