[project]
name = "sash"
version = "0.1.0"
description = "A static analysis tool for the shell based on symbolic execution"
readme = "README.md"
authors = [
    { name = "John Brown", email = "john_brown@brown.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "libdash>=0.3.1",
    "pash-annotations>=0.2.4",
    "shasta>=0.2.2",
    "z3-solver>=4.14.1.0",
]

[project.scripts]
sash = "sash:main.cli_main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pandas>=2.3.3",
    "pytest>=8.3.4",
    "pyyaml>=6.0.3",
    "hypothesis>=6.143.1",
]

[tool.uv.sources]
# Download libdash from GitHub on macOS only, because the PyPI version does not build properly there
# libdash = { git = "https://github.com/binpash/libdash", marker = "sys_platform == 'darwin'" }

# For now download libdash from GitHub on all platforms, because the PyPI version has bugs
libdash = { git = "https://github.com/binpash/libdash" }
