[project]
name = "sash"
version = "0.1.0"
description = "A static analysis tool for the shell based on symbolic execution"
readme = "README.md"
authors = [
    { name = "John Brown", email = "john_brown@brown.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.14.1.0",
    "pash-annotations>=0.2.4",
    "libdash>=0.4.1",
    "shasta @ git+https://github.com/binpash/shasta"
]

[project.scripts]
sash = "sash:main.cli_main"
sash-llm = "sash.llm_main:cli_main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pandas>=2.3.3",
    "pytest>=8.3.4",
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
    "matplotlib",
    "matplotlib_set_diagrams",
]
